--- a/apps/composeApp/src/androidMain/res/values/strings.xml
+++ b/apps/composeApp/src/androidMain/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">XY-Wallet</string>
 
+    <string name="no_data_available">No data available</string>
+
+    <string name="label_artist">Artist</string>
+    <string name="label_date">Date</string>
+    <string name="label_dimensions">Dimensions</string>
+    <string name="label_medium">Medium</string>
+    <string name="label_department">Department</string>
+    <string name="label_repository">Repository</string>
+    <string name="label_credits">Credits</string>
+
 </resources>
